--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,16 +3,76 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  background-color: rgb(48, 166, 182);
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.container {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 48px;
+}
+
+.date-picker {
+  padding: 10px;
+  text-align: center;
+  margin-right: 12px;
+  border: none;
+  border-radius: 4px;
+}
+
+.button {
+  padding: 12px 24px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.active {
+  background-color: rgb(214, 211, 24);
+}
+.start {
+  margin-right: 12px;
+}
+
+.reset {
+  background-color: #414141;
+  color: #fafafa;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+}
+
+.field {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 6px;
+}
+
+.value {
+  font-size: 56px;
+  padding: 5px 12px;
+  background-color: #fafafa;
+  border-radius: 4px;
+  margin-bottom: 12px;
+}
+
+.label {
+  font-size: 18px;
+  text-transform: uppercase;
 }
